New implementation for desktop and mobile versions
